# eole

./: .gitignore  Cargo.toml  README.md  dotgraph.sh  launch.sh
doc/readme/: Makefile
eole-parser/: Cargo.toml  README.md
eole-parser/src/: ast.rs  lib.rs  parser.lalrpop
src/: conversion.rs  helpers.rs  lib.rs  main.rs
src/eole/: mod.rs  net.rs  reduce.rs
src/eole/compactor/: interval.rs  mapped.rs  mod.rs
src/eole/gc/: erasink.rs  mod.rs  nogc.rs
tests/: 00_def.eole  01_gc.eole  02_sink.eole  03_import.eole  04_delta.eole  05_delta_delta.eole  06_levy.eole  07_perf_readback.eole
tests/asperti_book/: 00_lambdaI_ch2_p14.eole  01_levy_P_3_4_FG.eole  02_lamping.eole  03_graph_rewriting_example.eole  04_to_church_2.eole  README.md
tests/benchmarks/: README.md  fact01.eole  fact03.eole  fact03_noid.eole  fact05.eole  fact07.eole  fact07_noid.eole  fact09.eole  fact10.eole  fact20.eole  fact40.eole  fact80.eole  fibo01.eole  fibo03.eole  fibo05.eole  fibo07.eole  fibo10.eole  fibo13.eole  fibo16.eole  fibo19.eole  lawall_mairson_bookkeeping.eole  lawall_mairson_bookkeeping_more_trouble.eole  lawall_mairson_fan.eole  power_mod.eole  power_mod.lc
tests/gc/: 00_f_one.eole  01_f_three.eole  02_f_seven.eole  03_f_fifteen.eole  README.md
tests/recursion/: README.md  fact_auto_apply.eole  fact_turingcomb.eole  fact_ycomb.eole  fact_zcomb.eole
tests/to_fix/: perf_readback.eole
tests/tofix/: README.md  issue_002_01.eole  test
tests/tofix/issue3_readback/: README.md  issue_003_01.eole  min_pb.eole
